# buildwithnexus

./: .gitignore  .publish-trigger  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  IDENTITY.md  README.md  RECOVERY.md  SECURITY.md  index.browser.js  index.js  package-lock.json  package.json
.buildwithnexus/hooks/PreToolUse/: rule_gate.py
.buildwithnexus/knowledge/: entities.json  schema.json
.buildwithnexus/rules/: default_rules.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  release.yml  scorecard.yml  trigger-publish.yml
bwn/: Cargo.toml  README.md
bwn/src/: main.rs
examples/: settings.json
harness/: Cargo.toml
harness/benches/: perf.rs
harness/examples/: diffdemo.rs  multimodal_demo.rs  tui_demo.rs
harness/src/: agent.rs  bwn.rs  checkpoint.rs  config.rs  hooks.rs  knowledge.rs  lib.rs  local.rs  main.rs  media.rs  onboarding.rs  provider.rs  report.rs  rules.rs  session.rs  tools.rs  trace.rs  tui.rs  update.rs  verifier.rs  workflow.rs
harness/src/bundled_skills/: code-review.md  codebase-repair.md  data-analysis.md  decision_support.md  document-generation.md  frontend-ux.md  git-release.md  release-notes.md  research.md  rust-cli.md  security-review.md  self-knowledge.md  spec-writing.md  static-app.md  test-engineering.md  tool-use.md  verification_workflow.md
harness/src/bundled_skills/letsbeheroes/: hero-brainstorm.md  hero-debug.md  hero-execute.md  hero-plan.md  hero-ship.md  hero-subagents.md  hero-wait.md  letsbeheroes.md
harness/tests/: integration.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64/: README.md  package.json
npm/linux-x64/: README.md  package.json
npm/win32-x64/: README.md  package.json
scripts/: auto-update.js  bootstrap.js  bundle-release.sh  first-publish-platform-packages.sh  generate-sbom.sh  postinstall.js  resolve-binary.js  vendor.sh  verify-package.sh
spec/: agents.public.yaml
src/: deep-agents-bin.ts
src/cli/: interactive.ts  tui.ts
