[package]
name = "buildwithnexus"
version = "0.11.0"
edition = "2021"
description = "A hilariously fast agentic AI CLI harness — remote or local models, full TUI with modes, memory, skills, hooks, and image input"
license = "MIT"
repository = "https://github.com/garretts-apps/buildwithnexus"
default-run = "buildwithnexus"

[[bin]]
name = "buildwithnexus"
path = "src/main.rs"

[dependencies]
# Cross-platform terminal control (alt-screen, raw mode) — needed for npm distribution to Windows too.
crossterm = "0.28"
# Blocking HTTP with rustls — no async runtime, fast cold start, one TLS stack.
ureq = { version = "2.10", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "2.0"

[dev-dependencies]
# Integration tests construct mock-server JSON and parse the --json event stream.
serde_json = "1"
# Performance suite. Drop default features (rayon/plotters/html) but keep the
# bits `cargo bench` needs to actually run the harness.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "perf"
harness = false
