[package]
name = "buildwithnexus"
version = "0.12.6"
edition = "2021"
rust-version = "1.94"
description = "A hilariously fast agentic AI coding CLI — remote or local models, full TUI with live autocomplete, clean diffs, multimodal input, hooks, and checkpoints"
license = "MIT"
repository = "https://github.com/Garretts-Apps/buildwithnexus"
homepage = "https://buildwithnexus.dev"
readme = "../README.md"
keywords = ["ai", "agent", "cli", "tui", "llm"]
categories = ["command-line-utilities", "development-tools"]
default-run = "buildwithnexus"

# `cargo install buildwithnexus` installs BOTH binaries: the full name and
# the short `bwn` alias (same entry point).
[[bin]]
name = "buildwithnexus"
path = "src/main.rs"

[[bin]]
name = "bwn"
path = "src/bwn.rs"
# The alias shim collides with the bwn crate's bin in workspace `cargo doc`
# output paths, and a two-line shim has nothing to document anyway.
doc = false

[dependencies]
# Cross-platform terminal control (alt-screen, raw mode) — needed for npm distribution to Windows too.
crossterm = "0.28"
# Blocking HTTP with rustls — no async runtime, fast cold start, one TLS stack.
ureq = { version = "2.10", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "2.0"

[target.'cfg(unix)'.dependencies]
# Signal-safe terminal restore: SIGTERM/SIGHUP while in the alternate screen
# must leave the terminal usable, and a signal handler may only call
# async-signal-safe functions — raw write(2), tcsetattr(2), _exit(2).
# Already in the tree transitively via crossterm; this makes it direct.
libc = "0.2"

[dev-dependencies]
# Integration tests construct mock-server JSON and parse the --json event stream.
serde_json = "1"
# Performance suite. Drop default features (rayon/plotters/html) but keep the
# bits `cargo bench` needs to actually run the harness.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "perf"
harness = false
